--- a/homepage.html
+++ b/homepage.html
@@ -1,3 +1,25 @@
-<h1>Rawitsara Nupeng</h1>
-<hr/>
-<img style="width:100px" src="https://scontent.fbkk6-1.fna.fbcdn.net/v/t31.0-8/p960x960/23737702_1148773738558904_6377311618507260913_o.jpg?_nc_cat=100&_nc_eui2=AeG3TUVKOYr2SUN5cktx4Vs-r5uc8V23vu27uj5cIrZYXkfjeK449bGJD07o9i3-f84pfkXWv2V5PrQZHaahyyRq3laaCMm5dTOwSbP3orGvQw&_nc_oc=AQn4qb2TE5giDfnIwFVntSV2Xw5mLCFRz9iXPUP0rugpevIVDdudNZEUg2_Tci17geE&_nc_ht=scontent.fbkk6-1.fna&_nc_tp=1002&oh=f740c205b11ca25902b8bed136c9cad7&oe=5E920CA6">
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <style>
+    body{
+        text-align: center;
+        background-color: snow;
+    }
+    </style>
+</head>
+
+<body>
+    <h1>Rawitsara Nupeng</h1>
+    <h4 style="color:saddlebrown;">Student ID : 61010888</h4>
+    <hr />
+    <img style="width:200px"
+        src="https://scontent.fbkk6-1.fna.fbcdn.net/v/t31.0-8/p960x960/23737702_1148773738558904_6377311618507260913_o.jpg?_nc_cat=100&_nc_eui2=AeG3TUVKOYr2SUN5cktx4Vs-r5uc8V23vu27uj5cIrZYXkfjeK449bGJD07o9i3-f84pfkXWv2V5PrQZHaahyyRq3laaCMm5dTOwSbP3orGvQw&_nc_oc=AQn4qb2TE5giDfnIwFVntSV2Xw5mLCFRz9iXPUP0rugpevIVDdudNZEUg2_Tci17geE&_nc_ht=scontent.fbkk6-1.fna&_nc_tp=1002&oh=f740c205b11ca25902b8bed136c9cad7&oe=5E920CA6">
+</body>
+
+</html>
